@@ -1,4 +1,4 @@
-package com.ssh.dartserver.domain.team.domain;
+package com.ssh.dartserver.domain.team.domain.vo;
 
 import java.util.Arrays;
 import lombok.Getter;
@@ -9,9 +9,11 @@ import jakarta.persistence.Embeddable;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+import lombok.ToString;
 
 @Embeddable
 @Getter
+@ToString
 @NoArgsConstructor
 public class TeamUsersCombinationHash {
     private static final String SEPARATOR = "-";
@@ -35,6 +37,6 @@ public class TeamUsersCombinationHash {
     public List<Long> getUsersId() {
         return Arrays.stream(value.split(SEPARATOR))
                 .map(Long::parseLong)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
